required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version:
----------------

- Fixed msFreeMap causing memory corruption in msFreeOutputFormat (#3113)

- Fix WMC XML output when Dimension is used (#3110)

- Fix output for valid WCS 1.1 XML (#3086)

- Avoid double free with postgresql joins. (#2936)

- Fixed msMSSQL2008LayerGetShape to retrieve proper wkb geometries (#3082)

- Fixed the shape index for the inline layers (#3074)


Version 5.4.2 (2009-07-23):
---------------------------

- Fixed PHP/Mapscript to support PHP 5.3 (#3065, #3066)

- New fix for incomplete CVE-2009-0840 security fix made in 5.4.0 (#2943)

- Add centroid geomtransform (#2825)

- Fixed performance bottleneck when computing a polygon center of gravity for
  label point computation. (#3053)

- Save ALIGN parameter if it is set to CENTER or RIGHT (#3057)

- PHP: add a getResults method on the layer object (#2967)

Version 5.4.1 (2009-06-02):
---------------------------

- Fix MapScript whichShapes() to respect filters AND return all items (#2689)

- Fix error when saving the MAXLENGTH parameter (#3031)

- Test database connections before using them (#2932)

- Support non-numeric join criteria (#2006)

- Ensure there's enough room in the SQL to hold a long (#1284)

- Fix filter error in multi-clause filters (#2937)

- Fix memory leak in SQL building (#2997)

- Change the dll mapping rules to support the recent MONO versions (#3019)

- Added CURL_CA_BUNDLE env. var. to enable using HTTPS services in WMS/WFS
  client connections (#3007)

- Fixed a problem with an error message with mode=legendicon, wrong string 
  being output.

- Fixed detection of freetype when installed in non-system directory (#3008)
